--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -470,4 +470,6 @@ service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
      user root
      group system wakelock
 
-
+on property:sys.boot_completed=1
+    # Enable EAS
+    write /proc/sys/kernel/sched_energy_aware 1
